fix align-items
Former-commit-id: 8be16ef1ba1bbdababab38d4d6de40f051691414

--- a/frontend/src/components/Ranking.module.css
+++ b/frontend/src/components/Ranking.module.css
@@ -5,7 +5,10 @@
   justify-content: center;
   padding: 38px 0 58px;
 }
-
+.title {
+  font-weight: bold;
+  height: 30px;
+}
 .ranker {
   padding: 5px 5px 5px 5px;
   align-items: center;
